--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-openid-connect": "^2.9.0",
+    "jose": "^4.10.4",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
