--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_AUTH0_DOMAIN=dev-2bz1iby4ifs0qghq.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=dey2bFv3nMdeqRTgKS856AcaCRUuTW1G
+REACT_APP_AUTH0_AUDIENCE="https://dev-2bz1iby4ifs0qghq.us.auth0.com/api/v2/"
